@@ -1,6 +1,5 @@
 package com.example.bob_friend.service;
 
-import com.example.bob_friend.model.dto.MemberDto;
 import com.example.bob_friend.model.dto.RecruitmentDto;
 import com.example.bob_friend.model.entity.Member;
 import com.example.bob_friend.model.entity.Recruitment;
@@ -10,32 +9,32 @@ import com.example.bob_friend.model.exception.RecruitmentNotActiveException;
 import com.example.bob_friend.model.exception.RecruitmentNotFoundException;
 import com.example.bob_friend.repository.RecruitmentRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
 public class RecruitmentService {
     private final RecruitmentRepository recruitmentRepository;
+    private final ReportService reportService;
     private final MemberService memberService;
 
+
     public RecruitmentDto.Response findById(Long recruitmentId) {
-        Recruitment recruitment = recruitmentRepository.findById(recruitmentId)
-                .orElseThrow(() -> {
-                    throw new RecruitmentNotFoundException(recruitmentId);
-                });
+        Recruitment recruitment = getRecruitment(recruitmentId);
         return new RecruitmentDto.Response(recruitment);
     }
 
 
-    public List<RecruitmentDto.Response> findAll() {
-        return recruitmentRepository.findAll().stream()
-                .map(RecruitmentDto.Response::new)
-                .collect(Collectors.toList());
+    public Page<RecruitmentDto.ResponseList> findAll(Pageable pageable) {
+        Page<Recruitment> all = recruitmentRepository.findAll(pageable);
+        return all.map(RecruitmentDto.ResponseList::new);
     }
 
 
@@ -50,90 +49,105 @@ public class RecruitmentService {
 
     public void delete(Long recruitmentId) {
         Member currentMember = memberService.getCurrentMember();
-        Recruitment recruitment = recruitmentRepository.findById(recruitmentId)
-                .orElseThrow(() -> {
-                    throw new RecruitmentNotFoundException(recruitmentId);
-                });
-        if (recruitment.getAuthor().equals(currentMember))
+        Recruitment recruitment = getRecruitment(recruitmentId);
+        if (currentMember.equals(recruitment.getAuthor()))
             recruitmentRepository.deleteById(recruitmentId);
         else
             throw new MemberNotAllowedException(currentMember.getEmail());
     }
 
 
-//    public RecruitmentDto.Response update(Long recruitmentId,
-//                                          RecruitmentDto.Request update) {
-//        Recruitment recruitment = Recruitment.builder()
-//                .id(recruitmentId)
-//                .title(update.getTitle())
-//                .content(update.getContent())
-//                .build();
-//
-//        Recruitment savedRecruitment = recruitmentRepository.save(recruitment);
-//        return new RecruitmentDto.Response(savedRecruitment);
-//    }
-
-
-    public List<RecruitmentDto.Response> findAllByRestaurantNameAndRestaurantAddress(
+    public Page<RecruitmentDto.ResponseList> findAllByRestaurantNameAndRestaurantAddress(
             String restaurantName,
-            String restaurantAddress) {
-        return recruitmentRepository.findAllByRestaurantNameAndRestaurantAddress(restaurantName, restaurantAddress).stream()
-                .map(RecruitmentDto.Response::new)
+            String restaurantAddress,
+            Pageable pageable) {
+        List<RecruitmentDto.ResponseList> collect = recruitmentRepository
+                .findAllByRestaurantNameAndRestaurantAddress(restaurantName,
+                        restaurantAddress, pageable).stream()
+                .map(RecruitmentDto.ResponseList::new)
                 .collect(Collectors.toList());
+        return new PageImpl<>(collect);
     }
 
 
-    public List<RecruitmentDto.Response> findAllByRestaurantAddress(String restaurantAddress) {
-        return recruitmentRepository.findAllByRestaurantAddress(restaurantAddress).stream()
-                .map(RecruitmentDto.Response::new)
+    public Page<RecruitmentDto.ResponseList> findAllByRestaurantAddress(String restaurantAddress, Pageable pageable) {
+        List<RecruitmentDto.ResponseList> collect = recruitmentRepository
+                .findAllByRestaurantAddress(restaurantAddress, pageable).stream()
+                .map(RecruitmentDto.ResponseList::new)
                 .collect(Collectors.toList());
+        return new PageImpl<>(collect);
     }
 
 
-    public List<RecruitmentDto.Response> findAllAvailableRecruitments() {
+    public Page<RecruitmentDto.Response> findAllAvailableRecruitments(Pageable pageable) {
         Member currentMember = memberService.getCurrentMember();
-        return recruitmentRepository.findAll().stream()
-                .filter(recruitment ->
+        Page<Recruitment> all = recruitmentRepository.findAll(pageable);
+
+        List<RecruitmentDto.Response> map = all.filter(recruitment ->
                         !recruitment.hasMember(currentMember) &&
-                                !recruitment.getAuthor().equals(currentMember)
-                ).map(RecruitmentDto.Response::new)
-                .collect(Collectors.toList());
+                                !currentMember.equals(recruitment.getAuthor()))
+                .map(RecruitmentDto.Response::new).toList();
+        return new PageImpl<>(map);
     }
 
     public Set<RecruitmentDto.Address> findAllAvailableLocations() {
-        return recruitmentRepository.findAll().stream()
-                .map(RecruitmentDto.Address::new)
-                .collect(Collectors.toSet());
+        Map<RecruitmentDto.Address, Integer> addressMap = new HashMap();
+
+        Iterator<Recruitment> iterator =
+                recruitmentRepository.findAll().iterator();
+        while (iterator.hasNext()) {
+            Recruitment recruitment = iterator.next();
+            RecruitmentDto.Address address =
+                    new RecruitmentDto.Address(recruitment);
+            addressMap.put(address, addressMap.getOrDefault(address, 0) + 1);
+        }
+
+        for (Map.Entry<RecruitmentDto.Address, Integer> entry :
+                addressMap.entrySet()) {
+            entry.getKey().setCount(entry.getValue());
+        }
+        return addressMap.keySet();
     }
 
 
-    public List<RecruitmentDto.Response> findAllJoinedRecruitments() {
+    public Page<RecruitmentDto.ResponseList> findAllJoinedRecruitments(Pageable pageable) {
         Member author = memberService.getCurrentMember();
-        return recruitmentRepository.findAll().stream()
+        List<RecruitmentDto.ResponseList> collect = recruitmentRepository.findAll(pageable).stream()
                 .filter(recruitment ->
                         recruitment.hasMember(author) ||
-                                recruitment.getAuthor().equals(author)
-                ).map(RecruitmentDto.Response::new)
+                                author.equals(recruitment.getAuthor())
+                ).map(RecruitmentDto.ResponseList::new)
                 .collect(Collectors.toList());
+        return new PageImpl<>(collect);
     }
 
 
-    public List<RecruitmentDto.Response> findMyRecruitments() {
+    public Page<RecruitmentDto.ResponseList> findMyRecruitments(Pageable pageable) {
         Member author = memberService.getCurrentMember();
-        return recruitmentRepository.findAllByAuthor(author).stream()
-                .map(RecruitmentDto.Response::new)
+        List<RecruitmentDto.ResponseList> collect = recruitmentRepository.findAllByAuthor(author, pageable).stream()
+                .map(RecruitmentDto.ResponseList::new)
                 .collect(Collectors.toList());
+        return new PageImpl<>(collect);
     }
-
 
     @Transactional
-    public RecruitmentDto.Response joinOrUnjoin(Long recruitmentId) throws RecruitmentIsFullException, RecruitmentNotActiveException {
+    public RecruitmentDto.Response closeRecruitment(Long recruitmentId) {
+        Member author = memberService.getCurrentMember();
+        Recruitment recruitment = getRecruitment(recruitmentId);
+        if (author.equals(recruitment.getAuthor())) {
+            recruitment.close();
+        } else {
+            throw new MemberNotAllowedException(author.getNickname());
+        }
+        return new RecruitmentDto.Response(recruitment);
+    }
+
+    @Transactional
+    public RecruitmentDto.Response joinOrUnjoin(Long recruitmentId)
+            throws RecruitmentIsFullException, RecruitmentNotActiveException {
         Member currentMember = memberService.getCurrentMember();
 
-        Recruitment recruitment = recruitmentRepository.findById(recruitmentId)
-                .orElseThrow(() -> {
-                    throw new RecruitmentNotFoundException(recruitmentId);
-                });
+        Recruitment recruitment = getRecruitment(recruitmentId);
 
         validateRecruitment(recruitment);
 
@@ -146,11 +160,54 @@ public class RecruitmentService {
     }
 
 
+
+    public Page<RecruitmentDto.Response> searchTitle(String keyword, Pageable pageable) {
+        List<RecruitmentDto.Response> collect = recruitmentRepository
+                .findAllByTitleContaining(keyword, pageable)
+                .stream().map(RecruitmentDto.Response::new)
+                .collect(Collectors.toList());
+        return new PageImpl<>(collect);
+    }
+
+    public Page<RecruitmentDto.Response> searchContent(String keyword, Pageable pageable) {
+        List<RecruitmentDto.Response> collect = recruitmentRepository
+                .findAllByContentContaining(keyword, pageable)
+                .stream().map(RecruitmentDto.Response::new)
+                .collect(Collectors.toList());
+        return new PageImpl<>(collect);
+    }
+
+    public Page<RecruitmentDto.Response> searchRestaurant(String keyword, Pageable pageable) {
+        List<RecruitmentDto.Response> collect = recruitmentRepository
+                .findAllByRestaurantNameContaining(keyword, pageable)
+                .stream().map(RecruitmentDto.Response::new)
+                .collect(Collectors.toList());
+        return new PageImpl<>(collect);
+    }
+
+
+    public void reportRecruitment(Long recruitmentId) {
+        Recruitment recruitment = getRecruitment(recruitmentId);
+        Member member = recruitment.getAuthor();
+        reportService.reportWriting(member, recruitment);
+    }
+
+
+
+
     private void validateRecruitment(Recruitment recruitment) {
         if (recruitment.isFull())
             throw new RecruitmentIsFullException(recruitment.getId());
         if (!recruitment.isActive())
             throw new RecruitmentNotActiveException(recruitment.getId());
+    }
+
+
+    private Recruitment getRecruitment(Long recruitmentId) {
+        return recruitmentRepository.findById(recruitmentId)
+                .orElseThrow(() -> {
+                    throw new RecruitmentNotFoundException(recruitmentId);
+                });
     }
 
 }
